force-app/main/default/objects/Integration_Logs__c/Integration_Logs__c.object-meta.xml
<CustomObject>
    <label>Integration Log</label>
    <nameField>
        <displayFormat>Log-{00000000}</displayFormat>
        <label>Integration Logs No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>