force-app/main/default/objects/Integration_Logs__c/fields/Yacht_Reservation__c.field-meta.xml
<CustomField>
    <fullName>Yacht_Reservation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Yacht Reservation</label>
    <referenceTo>Yacht_Reservation__c</referenceTo>
    <relationshipLabel>Integration Logs</relationshipLabel>
    <relationshipName>Integration_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>