force-app/main/default/objects/Integration_Logs__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Yacht_Reservation__c</columns>
    <columns>Integration_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Error_Code__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Request_Payload__c</columns>
    <columns>Response_Payload__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>